--- a/training/training_GPU.ipynb
+++ b/training/training_GPU.ipynb
@@ -66,10 +66,9 @@
     "BATCH_SIZE = 32\n",
     "EPOCHS = 5\n",
     "import os\n",
-    "# Define the path to the directory containing your image data\n",
-    "data_directory = \"/Users/liamg/potato-deasease/PlantVillage\"\n",
+    "# Define the path to the directory containing image data\n",
+    "data_directory = \"../PlantVillage\"\n",
     "\n",
-    "# Get the absolute path to the data directory\n",
     "data_directory = os.path.abspath(data_directory)\n"
    ]
   },
