--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6229059f",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,9 @@
     "BATCH_SIZE = 32\n",
     "EPOCHS = 1\n",
     "import os\n",
-    "# Define the path to the directory containing your image data\n",
-    "data_directory = \"/Users/liamg/potato-deasease/PlantVillage\"\n",
+    "# Define the path to the directory containing image data\n",
+    "data_directory = \"../PlantVillage\"\n",
     "\n",
-    "# Get the absolute path to the data directory\n",
     "data_directory = os.path.abspath(data_directory)\n"
    ]
   },
